--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2021"
 futures ="0.3"
 reqwest = { version = "0.12", features = ["json"] }
 serde = { version = "1.0.204", features = ["derive"] }
-scraper = "0.19.1"
-
+scraper = "0.20.0"
+rayon = "1.8"
 tokio = { version = "1", features = ["full"] }
+regex = "1.10.6"
+serde_json = "1.0"
