--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ rayon = "1.8"
 tokio = { version = "1", features = ["full"] }
 regex = "1.10.6"
 serde_json = "1.0"
+sea-orm = { version = "1.0.0-rc.5", features = [ "sqlx-postgres","runtime-tokio-native-tls", "macros" ] }
